<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:id="@+id/no_internet_layout"
    android:background="@drawable/internet_background"
    app:layout_goneMarginStart="40dp"
    android:elevation="4dp"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/no_internet_connection"
        android:src="@drawable/ic_no_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_internet_connection"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/no_internet_text"
        android:fontFamily="@font/montserrat_thin"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/textview"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@id/textview"
        app:layout_constraintTop_toBottomOf="@id/textview" />

    <Button
        android:id="@+id/try_again"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="314dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/try_again"
        android:textColor="#000000"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingLeft="60dp"
        android:paddingTop="0dp"
        android:paddingRight="60dp"
        android:layout_marginBottom="20dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/textview2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textview2"
        app:layout_constraintTop_toBottomOf="@+id/textview2" />


</androidx.constraintlayout.widget.ConstraintLayout>